--- a/index.html
+++ b/index.html
@@ -166,6 +166,24 @@
             </div>
         </section>
         <!-- End of Contact -->
+        <!-- Footer --> 
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="brand brand-footer">
+                    <div class="logo1"></div>
+                    <div class="logo2"></div>
+                    <div class="logo3"></div>
+                    <span>ARCHITECTURE</span>
+                </div>
+                <div class="copyright">
+                    <p>&copy; All Rights Reserved. Hand coded by David Meskhishvili</p>
+                </div>
+            </div>
+        </footer>
+        <!-- End of Footer -->
+<!-- End of Container -->
+
+<script src="script.js"></script>
 
 </body>
 </html>
