--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <div class="banner">
                 <h1 class="banner-heading"><span>DREAM</span> HOUSE</h1>
                 <div class="banner-content">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, eveniet culpa numquam </p>
+                    <p>
+                        An award-winning architecture firm specializing in Luxury Residential, Clubhouse, and Hospitality design in the Scottsdale.
+                    </p>
                     <button>READ MORE</button>
                 </div>
             </div>
@@ -61,7 +63,12 @@
         <section class="about">
             <div class="about-left">
                 <h1>WE ARE CREATIVE BUILDING - DESIGN COMPANY</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione placeat et similique facere expedita voluptates, fuga accusamus quasi hic recusandae.</p>
+                <p>
+                    Based in Scottsdale, specializing 
+                    in Luxury Residential, Golf Clubhouse, and Hospitality 
+                    design. Our design concepts continually evolve, conform, 
+                    and most importantly – respond to each project’s unique characteristics. 
+                </p>
                 <button>READ MORE</button>
             </div>
             <div class="about-right">
@@ -86,35 +93,58 @@
                     <img src="images/card1.jpg">
                     <div class="card-content">
                         <h1>Your Dream House is here</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, vero?</p>
+                        <p>
+                            Our architects are ready to help you create your dream home. 
+                            We’re dedicated to making your vision come alive and using our 
+                            design talents to help you see everything your home can be.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/card2.jpg">
                     <div class="card-content">
                         <h1>Your Dream House is here</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, vero?</p>
+                        <p>
+                            Clubhouse architecture is like no other, which is why we love it. 
+                            Clubhouses have endless possibilities, and our team is excited to 
+                            help you achieve those possibilities. Our unique and innovative 
+                            design will leave your members in awe.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/card3.jpg">
                     <div class="card-content">
                         <h1>Your Dream House is here</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, vero?</p>
+                        <p>
+                            Our firm is passionate about helping hospitality groups realize 
+                            their architectural potential and enforcing their brand with stunning 
+                            and memorable design. Whether you’re in Scottsdale or Los Angeles, 
+                            your hospitality space will be an attraction.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/card4.jpg">
                     <div class="card-content">
                         <h1>Your Dream House is here</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, vero?</p>
+                        <p>
+                            Our architects are ready to help you create your dream home. 
+                            We’re dedicated to making your vision come alive and using our 
+                            design talents to help you see everything your home can be.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/card5.jpg">
                     <div class="card-content">
                         <h1>Your Dream House is here</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, vero?</p>
+                        <p>
+                            Our firm is passionate about helping hospitality groups realize 
+                            their architectural potential and enforcing their brand with stunning 
+                            and memorable design. Whether you’re in Scottsdale or Los Angeles, 
+                            your hospitality space will be an attraction.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -131,19 +161,19 @@
                 <div class="customers-card">
                     <img src="images/customer1.jpg" >
                     <div class="customers-card-content">
-                        <h1>John Smith</h1>
+                        <h1>Jean Valjean</h1>
                         <h3>Co-manager associated</h3>
                         <i class="fa-solid fa-quote-left"></i>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, illo velit ullam nam deleniti nisi?</p>
+                        <p>A very creative, thoughtful, and patient architecture firm. Professional. Great attention to details. I can’t imagine better or more talented people to work with.</p>
                     </div>
                 </div>
                 <div class="customers-card">
                     <img src="images/customer2.jpg">
                     <div class="customers-card-content">
-                        <h1>Ann White</h1>
+                        <h1>Shirley Keeldar</h1>
                         <h3>Co-manager associated</h3>
                         <i class="fa-solid fa-quote-left"></i>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, illo velit ullam nam deleniti nisi?</p>
+                        <p>If you want an architect who will listen carefully to your desires and try their hardest to meet every single one of them, then this is your firm.</p>
                     </div>
                 </div>
             </div>
